--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   titled_navigation_bar: ^3.5.0
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+1
+  rating_bar: ^0.2.0
 
 
 dev_dependencies:
