--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: ^0.5.6+1
   rating_bar: ^0.2.0
   readmore: ^1.0.0
+  email_validator: ^1.0.4
 
 
 dev_dependencies:
