--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   rating_bar: ^0.2.0
   readmore: ^1.0.0
   email_validator: ^1.0.4
+  flutter_credit_card: ^0.1.3
+
 
 
 dev_dependencies:
